deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-hello-world-deployment
  labels:
    app: demo-hello-world-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-hello-world-app
  template:
    metadata:
      labels:
        app: demo-hello-world-app
    spec:
      containers:
      - name: server
        image: "gcr.io/sinuous-tuner-303004/demo-hello-world"
        ports:
        - containerPort: 8080
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: "/health"
            port: 8080
            httpHeaders:
            - name: "Cookie"
              value: "shop_session-id=x-readiness-probe"
