ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # - host: "34.124.181.98.nip.io"
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-hello-world-app
            port:
              number: 80
